--- a/ex027/fundo005.html
+++ b/ex027/fundo005.html
@@ -31,7 +31,14 @@ main {
 </head>
 <body>
     <main>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat fuga cum soluta, dolorem ipsum cumque deleniti cupiditate eum quas dignissimos accusamus officiis assumenda dolore pariatur. Delectus ipsum aperiam porro pariatur.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat fuga cum soluta, dolorem ipsum cumque deleniti cupiditate eum quas dignissimos accusamus officiis assumenda dolore pariatur. Delectus ipsum aperiam porro pariatur.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Error deserunt maxime facere voluptatibus, sequi tenetur et, corporis, quidem quo ab quod id illo provident aut velit quia. Culpa, accusantium magnam.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit, nobis ducimus. Nihil quo explicabo voluptatum excepturi numquam, consectetur, provident, tempore aperiam fugiat distinctio earum aut debitis rerum quos aspernatur facilis.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat fuga cum soluta, dolorem ipsum cumque deleniti cupiditate eum quas dignissimos accusamus officiis assumenda dolore pariatur. Delectus ipsum aperiam porro pariatur.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Error deserunt maxime facere voluptatibus, sequi tenetur et, corporis, quidem quo ab quod id illo provident aut velit quia. Culpa, accusantium magnam.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit, nobis ducimus. Nihil quo explicabo voluptatum excepturi numquam, consectetur, provident, tempore aperiam fugiat distinctio earum aut debitis rerum quos aspernatur facilis.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat fuga cum soluta, dolorem ipsum cumque deleniti cupiditate eum quas dignissimos accusamus officiis assumenda dolore pariatur. Delectus ipsum aperiam porro pariatur.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Error deserunt maxime facere voluptatibus, sequi tenetur et, corporis, quidem quo ab quod id illo provident aut velit quia. Culpa, accusantium magnam.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit, nobis ducimus. Nihil quo explicabo voluptatum excepturi numquam, consectetur, provident, tempore aperiam fugiat distinctio earum aut debitis rerum quos aspernatur facilis.
+        </p>
     </main>
     
 </body>
